--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "i18nexus pull && next dev",
-    "build": "i18nexus pull && next build",
-    "start": "i18nexus pull && next start",
+    "dev": "i18nexus pull -k Px52wQ6c1nDQo-1LMoVQbA && next dev",
+    "build": "i18nexus pull -k Px52wQ6c1nDQo-1LMoVQbA && next build",
+    "start": "i18nexus pull -k Px52wQ6c1nDQo-1LMoVQbA && next start",
     "lint": "next lint"
   },
   "dependencies": {
