--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "i18nexus pull -k Px52wQ6c1nDQo-1LMoVQbA && next dev",
     "build": "i18nexus pull -k Px52wQ6c1nDQo-1LMoVQbA && next build",
     "start": "i18nexus pull -k Px52wQ6c1nDQo-1LMoVQbA && next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type": "module"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
     "i18nexus-cli": "^3.1.0",
     "next": "12.3.1",
     "next-i18next": "^12.1.0",
