--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
-    "bootstrap": "5.2.2",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.12",
     "i18nexus-cli": "^3.1.0",
     "next": "12.3.1",
     "next-i18next": "^12.1.0",
