--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.5",
+    "@emotion/styled.macro": "^0.10.6",
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "bootstrap": "^5.2.2",
     "i18nexus-cli": "^3.1.0",
+    "mdb-react-ui-kit": "^5.0.0",
     "next": "12.3.1",
     "next-i18next": "^12.1.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.0.0",
     "sharp": "^0.31.1"
