--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.5",
-    "@emotion/styled.macro": "^0.10.6",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "i18nexus-cli": "^3.1.0",
     "mdb-react-ui-kit": "^5.0.0",
     "next": "12.3.1",
     "next-i18next": "^12.1.0",
+    "nodemon": "^2.0.20",
     "react": "18.2.0",
-    "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.0.0",
-    "sharp": "^0.31.1"
+    "sharp": "^0.31.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
     "@next/eslint-plugin-next": "12.3.1",
     "@ts-safeql/eslint-plugin": "0.0.18",
     "@types/eslint": "8.4.6",
-    "@types/node": "18.8.5",
+    "@types/node": "^18.11.9",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.40.0",
@@ -52,7 +51,7 @@
     "eslint-plugin-testing-library": "5.7.2",
     "eslint-plugin-unicorn": "44.0.2",
     "libpg-query": "13.2.5",
-    "typescript": "4.8.4"
+    "typescript": "^4.8.4"
   },
   "resolutions": {
     "@typescript-eslint/eslint-plugin": "5.40.0",
