--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+I18NEXUS_API_KEY=Px52wQ6c1nDQo-1LMoVQbA
+
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
