--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "i18nexus pull -k Px52wQ6c1nDQo-1LMoVQbA && next dev",
-    "build": "i18nexus pull -k Px52wQ6c1nDQo-1LMoVQbA && next build",
-    "start": "i18nexus pull -k Px52wQ6c1nDQo-1LMoVQbA && next start",
+    "dev": "i18nexus pull  && next dev",
+    "build": "i18nexus pull  && next build",
+    "start": "i18nexus pull && next start",
     "lint": "next lint",
     "type": "module"
   },
@@ -17,12 +17,10 @@
     "mdb-react-ui-kit": "^5.0.0",
     "next": "12.3.1",
     "next-i18next": "^12.1.0",
-    "nodemon": "^2.0.20",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.0.0",
-    "sharp": "^0.31.1",
-    "ts-node": "^10.9.1"
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
