Intialize database, migration set up, fix some heads and alts

--- a/package.json
+++ b/package.json
@@ -7,16 +7,25 @@
     "build": "i18nexus pull  && next build",
     "start": "i18nexus pull && next start",
     "lint": "next lint",
-    "type": "module"
+    "type": "module",
+    "migrate": "dotenv ley"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@fortawesome/fontawesome-free": "^6.2.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/dotenv-safe": "^8.1.2",
+    "@types/sharp": "^0.31.0",
+    "bcrypt": "^5.1.0",
+    "dotenv-cli": "^6.0.0",
+    "dotenv-safe": "^8.2.0",
     "i18next": "^22.0.5",
     "i18nexus-cli": "^3.1.0",
+    "ley": "^0.8.1",
     "mdb-react-ui-kit": "^5.0.0",
     "next": "12.3.1",
     "next-i18next": "^12.1.0",
+    "postgres": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.0.0",
@@ -25,11 +34,11 @@
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
     "@next/eslint-plugin-next": "12.3.1",
-    "@ts-safeql/eslint-plugin": "0.0.18",
-    "@types/eslint": "8.4.6",
+    "@ts-safeql/eslint-plugin": "^0.0.21",
+    "@types/eslint": "^8.4.10",
     "@types/node": "^18.11.9",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
     "@upleveled/eslint-config-upleveled": "^3.3.9",
