--- a/.env
+++ b/.env
@@ -6,4 +6,9 @@ I18NEXUS_API_KEY=Px52wQ6c1nDQo-1LMoVQbA
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+PGHOST= localhost
+PGUSERNAME= op_ir_ren
+PGPASSWORD= free_iran
+PGDATABASE= op_ir_ren
