--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@emotion/react": "^11.10.4",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
     "@types/dotenv-safe": "^8.1.2",
+    "@types/js-cookie": "^3.0.2",
     "@types/sharp": "^0.31.0",
     "bcrypt": "^5.1.0",
+    "cookie": "^0.5.0",
     "dotenv-cli": "^6.0.0",
     "dotenv-safe": "^8.2.0",
     "i18next": "^22.0.5",
     "i18nexus-cli": "^3.1.0",
+    "js-cookie": "^3.0.1",
     "ley": "^0.8.1",
     "mdb-react-ui-kit": "^5.0.0",
     "next": "12.3.1",
