--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "i18nexus pull  && next dev",
-    "build": "i18nexus pull  && next build",
+    "build": "next build",
     "start": "i18nexus pull && next start",
     "lint": "next lint",
     "type": "module",
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
-
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
@@ -24,7 +23,6 @@
     "dotenv-cli": "^6.0.0",
     "dotenv-safe": "^8.2.0",
     "i18next": "^22.0.5",
-
     "i18nexus-cli": "^3.1.0",
     "js-cookie": "^3.0.1",
     "ley": "^0.8.1",
