--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "i18nexus pull  && next dev",
     "build": "next build",
-    "start": "i18nexus pull && next start",
+    "start": "next start",
     "lint": "next lint",
     "type": "module",
     "migrate": "dotenv ley"
